--- a/cls-practice/review/form.html
+++ b/cls-practice/review/form.html
@@ -66,24 +66,43 @@
    <input type="radio" name="feel"><label>I agree to terms & conditions</label><br>
    <button>Submit</button>
    <button>Reset</button>-->
-   <label>Name</label><input type="text" name="name"><br>
-   <label>Password</label><input type="Password" name="Password"><br>
+   <label>Name</label><input type="text" name="name" value="saran" ><br>
+   <label>Password</label><input type="Password" name="Password" maxlength="5" size="5"><br>
    <label>Email</label><input type="email" name="email"><br>
    <label>choose file</label><input type="file" name="file"><br>
    <label>button</label><input type="button" name="button"><br>
    <label>checkbox</label><input type="checkbox" name="checkbox"><br>
    <label>radio</label><input type="radio" name="radio"><br>
-   <label>image</label><input type="img" name="img/"><br>
    <label>search</label><input type="search" name="search"><br>
    <label>submit</label><input type="submit" name="submit"><br>
    <label>reset</label><input type="reset" name="reset"><br>
    <label>time</label><input type="time" name="time"><br>
+   <label>date</label><input type="date" name="date"><br>
+   <label>datetime-local</label><input type="datetime-local"><br>
    <label>week</label><input type="week" name="week"><br>
    <label>range</label><input type="range" name="range"><br>
    <label>month</label><input type="month" name="month"><br>
    <label>color</label><input type="color" name="color"><br>
-   <label>tel</label><input type="tel" name="tel"><br>
+   <label>tel</label><input type="tel" placeholder="cda-35" pattern="[A-S]{3}-[0-5]{2}" name="tel"><br>
    <label>hidden</label><input type="hidden" name="hidden"><br>
    <label>url</label><input type="url" name="url">
+   
+              <!-- form attribute -->
+              <!-- readonly -->
+			  <!-- required -->
+			  <!-- disabled -->
+			  <!-- for -->
+			  <!-- id -->
+			  <!-- placeholder -->
+			  <!-- row -->
+			  <!-- cols -->
+			  <!-- value -->
+			  <!-- actoion -->
+			  <!-- target -->
+			  <!-- min -->
+			  <!-- max -->
+			  <!-- size -->
+			  <!-- pattern -->
+			  
 </body>
 </html>
