--- a/js/js-intro/mapMethod.html
+++ b/js/js-intro/mapMethod.html
@@ -25,10 +25,11 @@
 	 
 	 //uppercase
 	 const fruits=["mango", "apple", "banana", "orange"];
+	 const fruit=[];
 	 for(i=0; i<fruits.length; i++){
-	    fruits[i]=fruits[i].toUpperCase()
+	    fruit[i]=fruits[i].toUpperCase()
 	 }
-	 console.log(fruits);
+	 console.log(fruit);
 	 
 	 //filter
 	 const ages=[8,10, 18, 20, 22];
@@ -38,15 +39,15 @@
 	 console.log(age);
 	 
 	 //findIndex
-     <!-- const[ -->
-	    <!-- {id:1, item:"Android Mobile", cost:6500}, -->
-		<!-- {id:2, item:"iPhone Mobile", cost:30000}, -->
-		<!-- {id:3, item:"window Mobile", cost:9000}, -->
-	<!-- ]; -->
-	<!-- let item=items.findIndex(function(value){ -->
-	   <!-- return value.cost>10000; -->
-	<!-- }); -->
-	<!-- console.log(item); -->
+    const items=[
+	   {id:1, item:"Android Mobile", cost:6500},
+	   {id:2, item:"iPhone Mobile", cost:30000},
+	   {id:3, item:"Window Mobile", cost:9000},
+	];
+	let item=items.findIndex(function(value){
+	   return value.cost>10000;
+	});
+	console.log(item);
 	 
 	 
 	
