--- a/js/task/prototype.html
+++ b/js/task/prototype.html
@@ -145,6 +145,32 @@
 	       console.log(date.localTimeString);</td>
 	   <td>16:05:22 PM</td>
 	</tr>
+	<tr>
+	   <th>toString()</th>
+	   <td>The toString() method returns a string as a string. This method does not change the original string.</td>
+	   <td>let array="hi hello"
+	       let arr=array.toString();
+		   console.log(arr);</td>
+	   <td>hi hello</td>
+	</tr>
+	<tr>
+	   <th>indexOf()</th>
+	   <td>The indexOf() method returns the position of the first occurrence of a value in a string. The indexOf() method returns -1 if the value is not found.</td>
+	   <td></td>
+	   <td></td>
+	</tr>
+	<tr>
+	   <th>constructor()</th>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	</tr>
+	<tr>
+	   <th>slice()</th>
+	   <td></td>
+	   <td></td>
+	   <td></td>
+	</tr>
 	</table>
 </body>
 </html>
