--- a/daily-task/devfolio/devfolio.html
+++ b/daily-task/devfolio/devfolio.html
@@ -25,15 +25,18 @@
 				     <a class="nav-list" href="#">DROP DOWN</a>
 				     <a class="nav-list" href="#">CONTACT</a>
 				  </div>
+				  <div class="exLink">
+				     <iconify-icon icon="pajamas:hamburger"></iconify-icon>
+				  </div>
 			    </div>
 			   <div class="img-content">
-			      <h1>I am Morgan Freeman</h1>
+			      <h1>I am Saranya Freeman</h1>
 				  <h3>Developer</h3>
 			   </div>
 		 </section>
 	  </section>
 	  <section>
-	     <section class="container">
+	     <!-- <section class="container">
 		    <section>
                <div>
 			      <div>
@@ -67,7 +70,7 @@
 			   </div>
 			</section>
 		 </section>
-	  </section>
+	  </section> -->
 	
 </body>
 </html>
