--- a/daily-task/devfolio/devfolio.html
+++ b/daily-task/devfolio/devfolio.html
@@ -22,11 +22,11 @@
 				     <a class="nav-list" href="#">SERVICE</a>
 				     <a class="nav-list" href="#">WORK</a>
 				     <a class="nav-list" href="#">BLOG</a>
-				     <a class="nav-list" href="#">DROP DOWN</a>
+				     <a class="nav-list" href="#">DROP DOWN <iconify-icon icon="ep:arrow-down"></iconify-icon></a>
 				     <a class="nav-list" href="#">CONTACT</a>
 				  </div>
 				  <div class="exLink">
-				     <iconify-icon icon="pajamas:hamburger"></iconify-icon>
+				     <iconify-icon class="burger" icon="pajamas:hamburger"></iconify-icon>
 				  </div>
 			    </div>
 			   <div class="img-content">
@@ -34,22 +34,21 @@
 				  <h3>Developer</h3>
 			   </div>
 		 </section>
-	  </section>
-	  <section>
-	     <!-- <section class="container">
-		    <section>
-               <div>
-			      <div>
-				     <div><img="img/man2.jpg"></div>
+	     </section>
+	     <section class="container abt">
+		    <section class="about">
+               <div class="abtImgcont">
+			      <div class="abtImg">
+				     <div><img src="img/saran2.jpg" width=100%;></div>
 				     <div>
-					    <h3>Name:<span>Morgan Freeman</span></h3>
-						<h3>Profile:<span>full stack developer</span></h3>
-						<h3>Email:<span>contact@example.com</span></h3>
-						<h3>Phone:<span>(617)557-0089</span></h3>
+					    <p><span>Name:</span>Saranya Freeman</p>
+						<p><span>Profile:</span>frontend developer</p>
+						<p><span>Email:</span>saranjokpr@gmail.com</p>
+						<p><span>Phone:</span>(91) 8754668220</p>
 					 </div>
 				  </div>
-				  <div>
-				     <h4>Skill</h4>
+				  <div class="abtSkill">
+				     <p>Skill</p>
 					 <label>HTML 85%:</label><BR>
 					 <progress value="85" max="100">85%</progress><br>
 					 <label>CSS3 75%:</label><BR>
@@ -60,7 +59,7 @@
 					 <progress value="90" max="100">90%</progress><br>
 				  </div>
 			   </div>
-			   <div>
+			   <div class="abtCont">
 			      <h1>About me</h1>
 				  <hr>
 				  <p>Curabitur non nulla sit amet nisl tempus convalis quis ac lectus. Curabitur arcu erat accumsan id imperdiet et, porttitor at sem. Praesent sapien mssa convallis a pellentesque nec egestas non nisi. Nulla porttitor accumsan tincidunt.</p>
@@ -70,7 +69,6 @@
 			   </div>
 			</section>
 		 </section>
-	  </section> -->
 	
 </body>
 </html>
