--- a/daily-task/saranya/saranya.html
+++ b/daily-task/saranya/saranya.html
@@ -30,8 +30,8 @@
 				  </div>
 			    </div>
 			   <div class="img-content">
-			      <h1>I am Saranya Freeman</h1>
-				  <h3>Developer</h3>
+			      <h1>I'm Saranya</h1>
+				  <h3>Frontend Developer</h3>
 			   </div>
 		 </section>
 	  </section>
@@ -71,45 +71,54 @@
 			</section>
 		 </section>
 	  </section>
-	  <section class="container">
+	  <!-- <section class="container">
 	     <div class="abtCont">
 	        <h1>Skills</h1>
 			<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 		 </div>
 		 <div class="progress">
-			<label>HTML</label>
-		    <progress value="100" max="100">100%</progress><br>
-			<label>CSS</label>
-		    <progress value="90" max="100">90%</progress><br>
-			<label>JS</label>
-			<progress value="50" max="100">50%</progress><br>
-		 </div>
-	  </section>
-	  <section>
+		    <div>
+			   <label>HTML 100%</label>
+		       <progress value="100" max="100">100%</progress><br>
+			</div>
+			<div>
+			   <label>CSS 90%</label>
+		       <progress value="90" max="100">90%</progress><br>
+			</div>
+			<div>
+			   <label>JS 50%</label>
+			   <progress value="50" max="100">50%</progress><br>
+			</div>
+			<div>
+			   <label>TYPE WRITING 95%</label>
+			   <progress value="95" max="100">95%</progress><br>
+		    </div>
+	  </section> -->
+	  <section class="fact">
 	     <section class="container">
-		    <section>
+		    <section class="factIn">
 			   <div class="abtCont">
 			       <h1>Facts</h1>
 				   <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 			   </div>
-			   <div class="box">
-			       <div class="boxs">
-				      <h2>232</h2>
-					  <p>Clients</p>
-				   </div>
-				   <div class="boxs">
-				      <h2>521</h2>
-					  <p>Projects</p>
-				   </div>
-				   <div class="boxs">
-				      <h2>1463</h2>
-					  <p>Hours Of Support</p>
-				   </div>
-				   <div class="boxs">
-				      <h2>15</h2>
-					  <p>Hard Workers</p>
-				   </div>
-			   </div>
+			   <div class="count-row">
+			      <div class="count-content">
+				     <span>232</span>
+				     <p>Happy Clients</p>
+			      </div>
+			      <div class="count-content">
+			      	 <span>521</span>
+				     <p>Projects</p>
+			      </div>
+			      <div class="count-content">
+				     <span>1463</span>
+				     <p>Hours Of Support</p>
+			      </div>
+			      <div class="count-content">
+			         <span>15</span>
+				     <p>Hard Workers</p>
+			      </div>
+		       </div>
 			</section>
 		 </section>
 	  </section>
@@ -120,11 +129,11 @@
 			      <h1>Testiminials</h1>
 				  <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 			   </div>
-			   <div class="terCont">
+			   <div class="terCont testi">
 			      <img class="terImg" src="img/sara.jpg" width=30%;>
-				  <h3>Sara Wilsson</h3>
+				  <h3>Sara Willison</h3>
 				  <p>Designer</p>
-				  <h6><iconify-icon icon="ci:double-quotes-l"></iconify-icon><i>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.<i> <iconify-icon icon="ci:double-quotes-r"></iconify-icon></h6>
+				  <h6><iconify-icon icon="ci:double-quotes-l"></iconify-icon><i>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum eram malis.<i> <iconify-icon icon="ci:double-quotes-r"></iconify-icon></h6>
 			   </div>
 			</section>
 		 </section>
@@ -138,7 +147,7 @@
 			   </div>
 			   <div class="resume">
 			      <div class="res">
-				     <div>
+				     <div class="resBor">
 					    <h2>Sumary</h2>
 						<h3>Alice Barkley</h3>
 						<p>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</p>
@@ -146,7 +155,7 @@
 						<li>(123) 456-7891</li>
 						<li>alice.barkley@example.com</li>
 					 </div>
-					 <div>
+					 <div class="resBor">
 					    <h2>Education</h2>
 						<h3>Master of Fine Arts & Graphic Design</h3>
 						<h4>2015 - 2016</h4>
@@ -158,7 +167,7 @@
 						<p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
 					 </div>
 				  </div>
-				  <div class="res">
+				  <div class="res resBor">
 				     <h2>Professional Experience</h2>
 					 <h3>Senior graphic design specialist</h3>
 					 <h4>2019 - Present</h4>
@@ -179,5 +188,58 @@
 			</section>
 		 </section>
 	  </section>
+	  <section class="service">
+	  <div class="container">
+	  <div class="ser">
+	     <div class="service-title">
+			<h1>Services</h1>
+		</div>
+		<div class="service-row">
+			<div class="service-content">
+				<div class="ser-icon">
+					<iconify-icon icon="ant-design:dribbble-outlined"></iconify-icon>
+				</div>
+				<h3>Lorem Ipsum</h3>
+				<p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+			</div>
+			<div class="service-content">
+				<div class="ser-icon">
+					<iconify-icon icon="bx:file"></iconify-icon>
+				</div>
+				<h3>Sed Perspiciatis</h3>
+				<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+			</div>
+			<div class="service-content">
+				<div class="ser-icon">
+					<iconify-icon icon="bx:tachometer"></iconify-icon>
+				</div>
+				<h3>Magni Dolores</h3>
+				<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+			</div>
+			<div class="service-content">
+				<div class="ser-icon">
+					<iconify-icon icon="bx:layer"></iconify-icon>
+				</div>
+				<h3>Nemo Enim</h3>
+				<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+			</div>
+			<div class="service-content">
+				<div class="ser-icon">
+					<iconify-icon icon="bx:slideshow"></iconify-icon>
+				</div>
+				<h3>Dele Cardo</h3>
+				<p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+			</div>
+			<div class="service-content">
+				<div class="ser-icon">
+					<iconify-icon icon="bx:arch"></iconify-icon>
+				</div>
+				<h3>Divera Don</h3>
+				<p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+			</div>
+		</div>
+	</div>
+	</div>
+</section>
 </body>
 </html>
