--- a/boostrap/itsMe/itsMe.html
+++ b/boostrap/itsMe/itsMe.html
@@ -110,5 +110,45 @@
 	  </section>
    </section>
 </section>
+<section class="about">
+   <section class="container">
+      <section class="abt">
+			<div>
+			   <h2>Resume</h2>
+			</div>
+			<div class="resume">
+			<div class="row">
+			   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+			   <div class="res">
+			      <h3>Education</h3>
+				  <h4>Under-Graduate</h4>
+				  <h5>2019-2022</h5>
+				  <p>Sri paramakalyani clg</p>
+				  <p>B.Sc(physics)</p>
+				  <p>Manonmaniam Sundaranar University</p>
+				  <p>Percentage:80.4%</p>
+				  <h4>Hobies</h4>
+				  <p><li>Reading books</li></p>
+			   </div>
+			   </div>
+			   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+			   <div class="res">
+			      <h4 class="traini">Training</h4>
+				  <h5>6 months</h5>
+				  <p>Fabevy Technologies</p>
+				  <p>Full Stack Frontend Developer</p>
+				   <h3>Extra skill</h3>
+				  <h4>Type writing</h4>
+				  <p>
+				     <li class="list">Tamil(higher,lower)</li>
+					 <li class="list">English(higher,lower)</li>
+				  </p>
+			   </div>
+			   </div>
+			</div>   
+			</div>
+	  </section>
+   </section>
+</section>
 </body>
 </html>
