--- a/boostrap/itsMe/itsMe.html
+++ b/boostrap/itsMe/itsMe.html
@@ -132,7 +132,7 @@
 			      <h4 class="traini">Training</h4>
 				  <h5>6 months</h5>
 				  <p>Fabevy Technologies</p>
-				  <p>Full Stack Frontend Developer</p>
+				  <p>Frontend Developer</p>
 				  <h3>Extra skill</h3>
 				  <h4>Type writing</h4>
 				  <p>
@@ -146,7 +146,7 @@
 	  </section>
    </section>
 </section>
-<section class="project,">
+<section class="project">
    <section class="container">
       <section class="projectIn">
 	     <div>
@@ -158,6 +158,7 @@
 			     <img src="img/port2.jpg" width=100%>
 				 <div class="portCont">
 				    <a href="file:///D:/Fabevy/practice-01/boostrap/ninestar/ninestar.html" target="-blank">BOOSTRAP</a>
+					<p>Ninestars is a free Bootstrap HTML5 portfolio website template for showcasing products, services, personal, or organizational portfolios.</p>
 				 </div>
 			  </div>
 		   </div>
@@ -165,7 +166,8 @@
 		      <div class="portImg">
 			     <img src="img/port3.jpg" width=100%>
 				 <div class="portCont">
-				    <a href="file:///D:/Fabevy/practice-01/daily-task/mamba/mamba.html" target="-blank">HTML & CSS</>
+				    <a href="file:///D:/Fabevy/practice-01/daily-task/mamba/mamba.html" target="-blank">HTML & CSS</a>
+					<p>Mamba is a simple and creative one page website template built Bootstrap. Designed and developed with modern design trend makes Mamba a perfect starting template to create creative agency.</p>
 				 </div>
 			  </div> 
 		   </div>
@@ -176,6 +178,7 @@
 			     <img src="img/port1.jpg" width=100%>
 				 <div class="portCont">
 				    <a href="file:///D:/Fabevy/practice-01/daily-task/folio/folio.html" target="-blank">HTML & CSS</a>
+					<p>Folio is the best website builder to build a simple website for your idea or business. Start Building </p>
 				 </div>
 			  </div>
 		   </div>
@@ -184,6 +187,7 @@
 			     <img src="img/port4.jpg" width=100%>
 				 <div class="portCont">
 				    <a href="file:///D:/Fabevy/practice-01/daily-task/saranya/saranya.html" target="-blank">HTML & CSS</a>
+					<p></p>
 				 </div>
 			  </div> 
 		   </div>
