--- a/js/task/prototype.html
+++ b/js/task/prototype.html
@@ -15,6 +15,23 @@
 	   console.log(array);
 	  }
 	  
+	  //forEach
+	  {const flowers=["rose", "lotus", "lilly", "sunflower"];
+	  flowers.forEach(function(arrayvalue,index,array){
+	     console.log(arrayvalue);
+		 console.log(index);
+		 console.log(array);
+	  });}
+	  
+	  //map
+	  flowers=["rose", "lotus", "lilly", "sunflower"];
+	   const newArray=flowers.map(function(flower){
+	     return flower.toUpperCase();
+	  });
+	     console.log(newArray);
+	  
+	  
+	  
 	  
    
    
