--- a/daily-task/folio/folio.html
+++ b/daily-task/folio/folio.html
@@ -31,7 +31,7 @@
 			    <img src="img/folioman.jpg" alt="" width=100%; height=700px;>
 			</div>
 			<div class="img-content">
-			    <h1>I'M ALEX SMITH</h1><br>
+			    <h1>I'M SARANYA</h1><br>
 				<p>Designer, Developer, Freelancer, Photographer</p><br><br>
 				<iconify-icon class="iconss" icon="akar-icons:facebook-fill"></iconify-icon>
 				<iconify-icon class="iconss" icon="akar-icons:twitter-fill"></iconify-icon>
@@ -44,7 +44,7 @@
 	     <section class="container">
 		   <div class="border-img">
 		     <div class="border">
-			     <img class="imgbor" src="img/folioman2.jpg" alt="">
+			     <img class="imgbor" src="img/saranya.jpg" width=100%; height=400rem; alt="">
 			 </div>
 			 <div class="bordiv">
 			      <h1>un a yx/ui designer austin based who loves clean. simple & design. i also enjoy crefting brand identities. icons.& ilustration work.</h1><br>
