--- a/daily-task/review/box-shadow.html
+++ b/daily-task/review/box-shadow.html
@@ -12,7 +12,7 @@
 	}
 	.box1{
 	border:2px solid blue;
-	box-shadow:8px 8px 8px 8px blue inset; 
+	box-shadow:8px 8px 8px 8px blue; 
 	}
 	.box2 h1{
 	color:yellow;
