--- a/js/js-intro/js-intro.html
+++ b/js/js-intro/js-intro.html
@@ -18,7 +18,7 @@
 	  const Fname="welcome";
 	  console.log(Fname);
 	  
-	 let num=10;
+	 let num=prompt("enter a number");
 	 let str="saranya";
 	 let bool="true";
 	 console.log(num);
