--- a/js/js-intro/mapMethod.html
+++ b/js/js-intro/mapMethod.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<meta http-eqiv="X-UA-compatible" content="IE=Rdge">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<m
+	meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>mapMethod</title>
 </head>
 <body>
@@ -44,10 +44,12 @@
 	   {id:2, item:"iPhone Mobile", cost:30000},
 	   {id:3, item:"Window Mobile", cost:9000},
 	];
-	let item=items.findIndex(function(value){
-	   return value.cost>10000;
+	let item2=items.findIndex(function(value){
+	   return value.cost<10000;
 	});
-	console.log(item);
+	console.log(item2);
+	
+	
 	 
 	 
 	
