--- a/js/task/prototype.html
+++ b/js/task/prototype.html
@@ -42,11 +42,13 @@
 	  
 	  // 6.splice
 	  flowers=["rose", "lotus", "lilly", "sunflower"];
-	  flowers.splice(2,0, "saran","saranya");
+	  flowers.splice(3,2);
 	  console.log(flowers);
 	  
 	  // 7.pop
 	  fruits=["mango", "apple", "banana", "graps"];
+	  fruit=fruits.length;
+	  console.log(fruit);
 	  fruits.pop();
 	  console.log(fruits);
 	  
@@ -54,6 +56,31 @@
 	  flowers=["rose", "lotus", "lilly", "sunflower"];
 	  flowers.shift();
 	  console.log(flowers);
+	  
+	  // 9.revers
+	  flowers=["rose", "lotus", "lilly", "sunflower"];
+	  flower=flowers.reverse();
+	  console.log(flowers);
+	  console.log(flower);
+	  
+	  // 10.indexOf
+	  flowers=[1,4,2,3,4,5,"3"];
+      flower=flowers.indexOf(4);
+	  console.log(flower);
+	  
+	  
+	  // 11.lastindexOf
+	  flowers=[1,4,2,3,4,5,"3"];
+      flower=flowers.lastIndexOf(4);
+	  console.log(flower);
+	  
+	  // 12.sort
+	  nums=[1, 11, 21, 110];
+	  num=nums.sort();
+	  console.log(num);
+	  
+	  
+	  
 	  
    
    
