--- a/js/task/object.html
+++ b/js/task/object.html
@@ -148,6 +148,40 @@
 	  }
 	  console.log(bike);}
 	  
+	  
+	 function add(num1, num2){
+	    let sub=num1-num2;
+		console.log(sub);
+	 }
+	 add(10,5)
+	 
+	 
+	 //
+	
+	 var a=prompt("Enter a value");
+	 var b=[];
+	 function array(num){
+	 for(i=0; i<a; i++){
+	    var c={
+		   name:"",
+		   age:"",
+		   profession:"",
+		};
+		d=prompt("enter the name");
+		c.name=d;
+		e=prompt("enter the age");
+		c.age=e;
+		f=prompt("enter the profession");
+		c.proffesion=f;
+		b[i]=c
+	 }
+	 return b;
+	 }
+	 array(a);
+	 console.log(b);
+	  
+	  
+	  
 	 
    </script>
 </body>
