--- a/js/task/object.html
+++ b/js/task/object.html
@@ -9,176 +9,226 @@
 <body>
    <script>
                 <!-- 1 -->
-      {const details={
-	     name:"saranya",
-		 age:21,
-		 profession:"developer",
-		 hobies:["reading books", "scrolling internet"]
-	  }
-	  console.log(details);}
+      <!-- {const details={ -->
+	     <!-- name:"saranya", -->
+		 <!-- age:21, -->
+		 <!-- profession:"developer", -->
+		 <!-- hobies:["reading books", "scrolling internet"] -->
+	  <!-- } -->
+	  <!-- console.log(details);} -->
 	  
 	      <!-- 2 -->
-	  {const veg={
-	     name:"tomato",
-		 color:"red",
-		 price:10
-	  }
-	  console.log(veg);}
+	  <!-- {const veg={ -->
+	     <!-- name:"tomato", -->
+		 <!-- color:"red", -->
+		 <!-- price:10 -->
+	  <!-- } -->
+	  <!-- console.log(veg);} -->
 	  
 	  
 	      <!-- 3 -->
-	  {const mobile={
-	     name:"redmi",
-		 color:"white",
-		 price:12000
-	  }
-	  console.log(mobile);}
+	  <!-- {const mobile={ -->
+	     <!-- name:"redmi", -->
+		 <!-- color:"white", -->
+		 <!-- price:12000 -->
+	  <!-- } -->
+	  <!-- console.log(mobile);} -->
 	  
 	  
 	  
 	      <!-- 4 -->
-	  {const chocolate={
-	     name:"dairymilk",
-		 color:"brown",
-		 price:100,
-	  }
-	  console.log(chocolate);}
+	  <!-- {const chocolate={ -->
+	     <!-- name:"dairymilk", -->
+		 <!-- color:"brown", -->
+		 <!-- price:100, -->
+	  <!-- } -->
+	  <!-- console.log(chocolate);} -->
 	  
 	  
 	      <!-- 5 -->
-	  {const icecream={
-	     name:"ice",
-		 color:"white",
-		 variety:"vanila",
-		 price:20
-	  }
-	  console.log(icecream);}
+	  <!-- {const icecream={ -->
+	     <!-- name:"ice", -->
+		 <!-- color:"white", -->
+		 <!-- variety:"vanila", -->
+		 <!-- price:20 -->
+	  <!-- } -->
+	  <!-- console.log(icecream);} -->
 	  
 	  
 	      <!-- 6 -->
-	  {const pen={
-	     name:"hero",
-		 color:"red",
-		 price:100
-	  }
-	  console.log(pen);}
+	  <!-- {const pen={ -->
+	     <!-- name:"hero", -->
+		 <!-- color:"red", -->
+		 <!-- price:100 -->
+	  <!-- } -->
+	  <!-- console.log(pen);} -->
 	  
 	  
 	  
 	        <!-- 7 -->
-	  {const details={
-	     name:"saran",
-		 rollnum:20191231522133,
-		 department:"physics",
-		 clg:"sri paramakalyani",
-		 place:"alwarkurichi"
-	  }
-	  console.log(details);}
+	  <!-- {const details={ -->
+	     <!-- name:"saran", -->
+		 <!-- rollnum:20191231522133, -->
+		 <!-- department:"physics", -->
+		 <!-- clg:"sri paramakalyani", -->
+		 <!-- place:"alwarkurichi" -->
+	  <!-- } -->
+	  <!-- console.log(details);} -->
 	  
 	 
 	  <!-- 8 -->
-	  {let flower={
-	     name:"rose",
-		 color:"red",
-		 scientificName:"rosa",
-		 family:"rosaceae"
-	  }
-	  console.log(flower);}
+	  <!-- {let flower={ -->
+	     <!-- name:"rose", -->
+		 <!-- color:"red", -->
+		 <!-- scientificName:"rosa", -->
+		 <!-- family:"rosaceae" -->
+	  <!-- } -->
+	  <!-- console.log(flower);} -->
 	  
 	  
 	  <!-- 9 -->
-	  {var fruit={
-	     name:"mango",
-		 color:"yellow",
-		 brand:"luxury apparel brand",
-	  }
-	  console.log(fruit);}
+	  <!-- {var fruit={ -->
+	     <!-- name:"mango", -->
+		 <!-- color:"yellow", -->
+		 <!-- brand:"luxury apparel brand", -->
+	  <!-- } -->
+	  <!-- console.log(fruit);} -->
 	  
 	 
 	  
 	  <!-- 10 -->
-	  {let bike={
-	     name:"ns200",
-		 color:"white",
-		 price:140915
-	  }
-	  console.log(bike);}
+	  <!-- {let bike={ -->
+	     <!-- name:"ns200", -->
+		 <!-- color:"white", -->
+		 <!-- price:140915 -->
+	  <!-- } -->
+	  <!-- console.log(bike);} -->
 	  
 	  
 	      <!-- 11 -->
-	  {const dress={
-	     name:"saree",
-		 color:"red",
-		 price:1000,
-		 model:"silk"
-	  }
-	  console.log(dress);}
+	  <!-- {const dress={ -->
+	     <!-- name:"saree", -->
+		 <!-- color:"red", -->
+		 <!-- price:1000, -->
+		 <!-- model:"silk" -->
+	  <!-- } -->
+	  <!-- console.log(dress);} -->
 	  
 	   <!-- 12 -->
-	  {const laptop={
-	     name:"laptor",
-		 color:"black",
-		 price:150000,
-		 model:"lenovo"
-	  }
-	  console.log(laptop);}
+	  <!-- {const laptop={ -->
+	     <!-- name:"laptor", -->
+		 <!-- color:"black", -->
+		 <!-- price:150000, -->
+		 <!-- model:"lenovo" -->
+	  <!-- } -->
+	  <!-- console.log(laptop);} -->
 	  
 	   <!-- 13 -->
-	  {const food={
-	     name:"biriyani",
-		 rate:100,
-		 variety:"chicken"
-	  }
-	  console.log(food);}
+	  <!-- {const food={ -->
+	     <!-- name:"biriyani", -->
+		 <!-- rate:100, -->
+		 <!-- variety:"chicken" -->
+	  <!-- } -->
+	  <!-- console.log(food);} -->
 	  
 	   <!-- 14 -->
-	  {const animal={
-	     name:"car",
-		 color:"white",
-		 food:"mile"
-	  }
-	  console.log(animal);}
+	  <!-- {const animal={ -->
+	     <!-- name:"car", -->
+		 <!-- color:"white", -->
+		 <!-- food:"mile" -->
+	  <!-- } -->
+	  <!-- console.log(animal);} -->
 	  
 	   <!-- 15 -->
-	  {const bike={
-	     name:"yamaha",
-		 color:"red",
-		 price:125000,
-		 speed:133
-	  }
-	  console.log(bike);}
+	  <!-- {const bike={ -->
+	     <!-- name:"yamaha", -->
+		 <!-- color:"red", -->
+		 <!-- price:125000, -->
+		 <!-- speed:133 -->
+	  <!-- } -->
+	  <!-- console.log(bike);} -->
 	  
 	  
-	 function add(num1, num2){
-	    let sub=num1-num2;
-		console.log(sub);
-	 }
-	 add(10,5)
+	 <!-- function add(num1, num2){ -->
+	    <!-- let sub=num1-num2; -->
+		<!-- console.log(sub); -->
+	 <!-- } -->
+	 <!-- add(10,5) -->
 	 
 	 
-	 //
+	 <!-- // -->
 	
-	 var a=prompt("Enter a value");
-	 var b=[];
-	 function array(num){
-	 for(i=0; i<a; i++){
-	    var c={
-		   name:"",
-		   age:"",
-		   profession:"",
-		};
-		d=prompt("enter the name");
-		c.name=d;
-		e=prompt("enter the age");
-		c.age=e;
-		f=prompt("enter the profession");
-		c.proffesion=f;
-		b[i]=c
-	 }
-	 return b;
-	 }
-	 array(a);
-	 console.log(b);
+	 <!-- var a=prompt("Enter a value"); -->
+	 <!-- var b=[]; -->
+	 <!-- function array(num){ -->
+	 <!-- for(i=0; i<a; i++){ -->
+	    <!-- var c={ -->
+		   <!-- name:"", -->
+		   <!-- age:"", -->
+		   <!-- profession:"", -->
+		<!-- }; -->
+		<!-- d=prompt("enter the name"); -->
+		<!-- c.name=d; -->
+		<!-- e=prompt("enter the age"); -->
+		<!-- c.age=e; -->
+		<!-- f=prompt("enter the profession"); -->
+		<!-- c.proffesion=f; -->
+		<!-- b[i]=c -->
+	 <!-- } -->
+	 <!-- return b; -->
+	 <!-- } -->
+	 <!-- array(a); -->
+	 <!-- console.log(b); -->
+	 
+	 
+	 // 
+	 
+	 function arrayname(g){
+	    var b=[];
+		var c;
+		for(i=0; i<g; i++){
+		   d=parseInt(prompt("create inner array"));
+		   if(d==0){
+		      d=parseInt(prompt("create single array"));
+			  b[i]=d;
+		   }
+		   else{
+		      c=[];
+			  for(j=0; j<d; j++){
+			     e=parseInt(prompt("inner array value"));
+				 c[j]=e;
+			  }
+			  b[i]=c;
+		   }
+		}
+		return b;
+	 };
+	 
+	 
+	 function funname(one){
+	    if(x<f.length){
+		   if(typeof f[one]=="number"){
+		      t=(f[one]);
+			  return t;
+		   }
+		   else{
+		      if(typeof f[one]=="object"){
+			     var y=parseInt(prompt("enter the check index"));
+				 q=f[one][y];
+				 return q;
+			  }
+		   }
+		}
+	 };
+	 
+	 var a=parseInt(prompt("enter array length"));
+	 var f=arrayname(a);
+	 console.log(f);
+	 
+	 var x=parseInt(prompt("enter the check index"));
+	 var second=funname(x);
+	 console.log(second);
+	 
 	  
 	  
 	  
