--- a/js/task/calculator/calculator.html
+++ b/js/task/calculator/calculator.html
@@ -47,6 +47,11 @@
 	   outputScreen.value = "";
 	}
 	
+	function calculate(){
+	   outputScreen.value = eval(outputScreen.value)
+	}
+	
+	
 	
    </script>
 
