--- a/daily task/day/day.html
+++ b/daily task/day/day.html
@@ -10,6 +10,43 @@
 	<script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
 </head>
 <body>
-
+   <section class="headerOut">
+      <section class="container">
+	     <section class="headerIn">
+		    <div class="headIcon1">
+		       <p><iconify-icon icon="ic:baseline-mail"></iconify-icon> info@email.com</p>
+			   <p><iconify-icon icon="ant-design:mobile-filled"></iconify-icon> +1 5589 55488 55</p>
+		    </div>
+			<div class="headIcon2">
+			   <iconify-icon icon="mdi:twitter"></iconify-icon>
+			   <iconify-icon icon="ic:outline-facebook"></iconify-icon>
+			   <iconify-icon icon="ri:instagram-fill"></iconify-icon>
+			   <iconify-icon icon="carbon:logo-linkedin"></iconify-icon>
+			</div>
+		 </section>
+	  </section>
+   </section>
+   <section class="headNameOut">
+      <section class="container">
+	     <section class="headNameIn">
+		    <div class="headName">
+			   <h1>Day</h1>
+			</div>
+			<div class="headLink">
+			   <a href="#">Home</a>
+			   <a href="#">About</a>
+			   <a href="#">Services</a>
+			   <a href="#">Portfolio</a>
+			   <a href="#">Pricing</a>
+			   <a href="#">Team</a>
+			   <a href="#">Drop Down <iconify-icon icon="material-symbols:keyboard-arrow-down"></iconify-icon></a>
+			   <a href="#">Contact</a>
+			</div>
+			<div class="burger">
+			   <iconify-icon icon="circum:menu-burger"></iconify-icon>
+			</div>
+		 </section>
+	  </section>
+   </section>
 </body>
 </html>
