--- a/daily task/day/day.html
+++ b/daily task/day/day.html
@@ -33,7 +33,7 @@
 			   <h1>Day</h1>
 			</div>
 			<div class="headLink">
-			   <a href="#">Home</a>
+			   <a href="#" class="solo">Home</a>
 			   <a href="#">About</a>
 			   <a href="#">Services</a>
 			   <a href="#">Portfolio</a>
@@ -45,6 +45,15 @@
 			<div class="burger">
 			   <iconify-icon icon="circum:menu-burger"></iconify-icon>
 			</div>
+		 </section>
+	  </section>
+   </section>
+   <section class="mainHeadOut">
+      <section class="container">
+	     <section class="mainHeadIn">
+		    <h2>WELCOME TO DAY</h2>
+			<p>We are team of talented designers making websites with Bootstrap</p>
+			<a href="#">GET STARTED</a>
 		 </section>
 	  </section>
    </section>
