--- a/daily task/day/day.html
+++ b/daily task/day/day.html
@@ -57,5 +57,22 @@
 		 </section>
 	  </section>
    </section>
+   <section class="abtOut">
+      <section class="container">
+	     <section class="abtIn">
+		    <div>
+			   <h2>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h2>
+			   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			   <p><iconify-icon icon="mdi:tick-circle-outline"></iconify-icon>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			   <p><iconify-icon icon="mdi:tick-circle-outline"></iconify-icon>Duis aute irure dolor in reprehenderit in voluptate velit</p>
+			   <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</p>
+			   <p><iconify-icon icon="mdi:tick-circle-outline"></iconify-icon>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+			</div>
+			<div>
+			   <img src="img/about.jpg" width=100%>
+			</div>
+		 </section>
+	  </section>
+   </section>
 </body>
 </html>
