--- a/js/task/object.html
+++ b/js/task/object.html
@@ -9,13 +9,37 @@
 <body>
    <script>
                 <!-- 1 -->
-      <!-- {const details={ -->
-	     <!-- name:"saranya", -->
-		 <!-- age:21, -->
-		 <!-- profession:"developer", -->
-		 <!-- hobies:["reading books", "scrolling internet"] -->
-	  <!-- } -->
-	  <!-- console.log(details);} -->
+      const details={
+	     name:"saranya",
+		 profession:"developer",
+		 hobies:["reading books", "scrolling internet"]
+	  }
+	  console.log(details);
+	 details.age=21;
+	 console.log(details);
+	 details.name="saran"
+	 console.log(details);
+	 delete details.name;
+	 console.log(details);
+	  
+	  let person=[
+	     {
+		    name:"saranya",
+			id:123,
+			profession:"developer"
+		 }
+		 
+	  ]
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
+	  
 	  
 	      <!-- 2 -->
 	  <!-- {const veg={ -->
@@ -183,53 +207,79 @@
 	 
 	 // 
 	 
-	 function arrayname(g){
-	    var b=[];
-		var c;
-		for(i=0; i<g; i++){
-		   d=parseInt(prompt("create inner array"));
-		   if(d==0){
-		      d=parseInt(prompt("create single array"));
-			  b[i]=d;
-		   }
-		   else{
-		      c=[];
-			  for(j=0; j<d; j++){
-			     e=parseInt(prompt("inner array value"));
-				 c[j]=e;
-			  }
-			  b[i]=c;
-		   }
-		}
-		return b;
-	 };
+	 <!-- function arrayname(g){ -->
+	    <!-- var b=[]; -->
+		<!-- var c; -->
+		<!-- for(i=0; i<g; i++){ -->
+		   <!-- d=parseInt(prompt("create inner array length")); -->
+		   <!-- if(d==0){ -->
+		      <!-- d=parseInt(prompt("create single array")); -->
+			  <!-- b[i]=d; -->
+		   <!-- } -->
+		   <!-- else{ -->
+		      <!-- c=[]; -->
+			  <!-- for(j=0; j<d; j++){ -->
+			     <!-- e=parseInt(prompt("inner array value")); -->
+				 <!-- c[j]=e; -->
+			  <!-- } -->
+			  <!-- b[i]=c; -->
+		   <!-- } -->
+		<!-- } -->
+		<!-- return b; -->
+	 <!-- }; -->
 	 
 	 
-	 function funname(one){
-	    if(x<f.length){
-		   if(typeof f[one]=="number"){
-		      t=(f[one]);
-			  return t;
-		   }
-		   else{
-		      if(typeof f[one]=="object"){
-			     var y=parseInt(prompt("enter the check index"));
-				 q=f[one][y];
-				 return q;
-			  }
-		   }
-		}
-	 };
+	 <!-- function arrayread(mainarray,mainindex){ -->
+	    <!-- if(mainindex<mainarray.length){ -->
+		   <!-- if(typeof mainarray[mainindex]=="number"){ -->
+		     <!-- var t=mainarray[mainindex]; -->
+			  <!-- return t; -->
+		   <!-- } -->
+		   <!-- else{ -->
+		       <!-- var subindex=parseInt(prompt("enter the sub check index")); -->
+			   <!-- if(subindex<mainarray[mainindex].length){ -->
+				<!-- var t =mainarray[mainindex][subindex]; -->
+				 <!-- return t; -->
+				 <!-- } -->
+				 <!-- else{ -->
+				 <!-- console.log("out of range") -->
+				 <!-- } -->
+		<!-- } -->
+	 <!-- } -->
+	 <!-- else{ -->
+				 <!-- console.log("out of range") -->
+				 <!-- } -->
+	 <!-- }; -->
+	   <!-- function arrayupdate(mainarray){ -->
+	     <!-- let index=prompt("enter the main index"); -->
+		 <!-- let newvalue=prompt("enter the main index newvalue"); -->
+		 <!-- mainarray[index]=newvalue; -->
+		 <!-- console.log(mainarray); -->
+		 <!-- return mainarray; -->
+	  <!-- } -->
 	 
-	 var a=parseInt(prompt("enter array length"));
-	 var f=arrayname(a);
-	 console.log(f);
+	 <!-- var a=parseInt(prompt("enter main array length")); -->
+	 <!-- var f=arrayname(a); -->
+	 <!-- console.log(f); -->
 	 
-	 var x=parseInt(prompt("enter the check index"));
-	 var second=funname(x);
-	 console.log(second);
+	 <!-- var x=parseInt(prompt("enter the main check index")); -->
+	 <!-- var second=arrayread(f,x); -->
+	 <!-- console.log(second); -->
 	 
-	  
+	 <!-- main=prompt("enter a main intex"); -->
+	 <!-- sub=prompt("enter a sub intex"); -->
+	 <!-- if(main<f.length){ -->
+	    <!-- value=prompt("enter a new value"); -->
+		<!-- f[main][sub]=value; -->
+	 <!-- } -->
+	 <!-- else{ -->
+	    <!-- console.log("num not fount"); -->
+	 <!-- } -->
+	 <!-- console.log(f); -->
+	 
+	
+	  <!-- up=arrayupdate(f); -->
+	  <!-- console.log(up); -->
 	  
 	  
 	 
