--- a/daily task/day/day.html
+++ b/daily task/day/day.html
@@ -60,7 +60,7 @@
    <section class="abtOut">
       <section class="container">
 	     <section class="abtIn">
-		    <div>
+		    <div class="abtCont">
 			   <h2>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h2>
 			   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			   <p><iconify-icon icon="mdi:tick-circle-outline"></iconify-icon>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -68,8 +68,29 @@
 			   <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</p>
 			   <p><iconify-icon icon="mdi:tick-circle-outline"></iconify-icon>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 			</div>
-			<div>
+			<div class="abtImg">
 			   <img src="img/about.jpg" width=100%>
+			</div>
+		 </section>
+	  </section>
+   </section>
+   <section class="loremOut">
+      <section class="container">
+	     <section class="loremIn">
+		    <div class="lorem">
+			   <h2>01</h2>
+			   <h3>Lorem Ipsum</h3>
+			   <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+			</div>
+			<div class="lorem">
+			   <h2>02</h2>
+			   <h3>Repellat Nihil</h3>
+			   <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
+			</div>
+			<div class="lorem">
+			   <h2>03</h2>
+			   <h3>Ad ad velit qui</h3>
+			   <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
 			</div>
 		 </section>
 	  </section>
