--- a/boostrap/itsMe/itsMe.html
+++ b/boostrap/itsMe/itsMe.html
@@ -31,10 +31,10 @@
           <a class="nav-link" href="#">Resume</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="#">Project</a>
+          <a class="nav-link" href="#">Skill</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="#">Project</a>
         </li>
       </ul>
     </div>
@@ -167,7 +167,7 @@
 			     <img src="img/port3.jpg" width=100%>
 				 <div class="portCont">
 				    <a href="file:///D:/Fabevy/practice-01/daily-task/mamba/mamba.html" target="-blank">HTML & CSS</a>
-					<p>Mamba is a simple and creative one page website template built Bootstrap. Designed and developed with modern design trend makes Mamba a perfect starting template to create creative agency.</p>
+					<p>Mamba is a simple and creative one page website template built Bootstrap. Designed and developed with modern design trend makes Mamba a perfect starting template.</p>
 				 </div>
 			  </div> 
 		   </div>
@@ -178,7 +178,7 @@
 			     <img src="img/port1.jpg" width=100%>
 				 <div class="portCont">
 				    <a href="file:///D:/Fabevy/practice-01/daily-task/folio/folio.html" target="-blank">HTML & CSS</a>
-					<p>Folio is the best website builder to build a simple website for your idea or business. Start Building </p>
+					<p>Folio is the best website builder to build a simple website for your idea or business.</p>
 				 </div>
 			  </div>
 		   </div>
@@ -187,7 +187,7 @@
 			     <img src="img/port4.jpg" width=100%>
 				 <div class="portCont">
 				    <a href="file:///D:/Fabevy/practice-01/daily-task/saranya/saranya.html" target="-blank">HTML & CSS</a>
-					<p></p>
+					<p>It's my own website, build by me.</p>
 				 </div>
 			  </div> 
 		   </div>
