--- a/daily task/day/day.html
+++ b/daily task/day/day.html
@@ -95,5 +95,70 @@
 		 </section>
 	  </section>
    </section>
+   <!-- <section class="clientOut"> -->
+      <!-- <section class="container"> -->
+	     <!-- <section class="clientIn"> -->
+		    <!-- <div> -->
+			   <!-- <img src="img/client-1.png" width=100%;> -->
+			<!-- </div> -->
+			<!-- <div> -->
+			   <!-- <img src="img/client-2.png" width=100%;> -->
+			<!-- </div> -->
+			<!-- <div> -->
+			   <!-- <img src="img/client-3.png" width=100%;> -->
+			<!-- </div> -->
+			<!-- <div> -->
+			   <!-- <img src="img/client-4.png" width=100%;> -->
+			<!-- <div> -->
+			   <!-- <img src="img/client-5.png" width=100%;> -->
+			<!-- </div> -->
+			<!-- <div> -->
+			   <!-- <img src="img/client-6.png" width=100%;> -->
+			<!-- </div> -->
+		 <!-- </section> -->
+	  <!-- </section> -->
+   <!-- </section> -->
+   <section class="serOut">
+      <section class="container">
+	     <section class="serIn">
+		    <div>
+			   <h2>SERVICES</h2>
+			   <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+			</div>
+			<div>
+			   <div class="serCont">
+			      <iconify-icon icon="ion:logo-dribbble"></iconify-icon>
+			      <h3>Lorem Ipsum</h3>
+				  <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+			   </div>
+			   <div class="serCont">
+			      <iconify-icon icon="bx:file"></iconify-icon>
+			      <h3>Sed ut perspiciatis</h3>
+				  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+			   </div>
+			   <div class="serCont">
+			      <iconify-icon icon="bx:tachometer"></iconify-icon>
+			      <h3>Magni Dolores</h3>
+				  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+			   </div>
+			   <div class="serCont">
+			      <iconify-icon icon="bx:world"></iconify-icon>
+			      <h3>Nemo Enim</h3>
+				  <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+			   </div>
+			   <div class="serCont">
+			      <iconify-icon icon="bx:slideshow"></iconify-icon>
+			      <h3>Dele cardo</h3>
+				  <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+			   </div>
+			   <div class="serCont">
+			      <iconify-icon icon="bx:arch"></iconify-icon>
+			      <h3>Divera don</h3>
+				  <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+			   </div>
+			</div>
+		 </section>
+	  </section>
+   </section>
 </body>
 </html>
