snake_and_ladder

--- a/js/task/snake_and_ladder/snake_and_ladder.html
+++ b/js/task/snake_and_ladder/snake_and_ladder.html
@@ -8,6 +8,10 @@
 	<title>snake and ladder</title>
 </head>
 <body>
+   <script>
+      
+   
+   </script>
    <div class="playBox">
       <table>
 	     <tr>
@@ -17,7 +21,6 @@
 			<td id="97" class="white">97</td>
 			<td id="96" class="red">96</td>
 			<td id="95" class="green">95</td>
-			<!-- <img src="img/snake1.png" width=10%> -->
 			<td id="94" class="blue">94</td>
 			<td id="93" class="yellow">93</td>
 			<td id="92" class="white">92</td>
@@ -132,6 +135,21 @@
 			<td id="10" class="white">10</td>
 		 </tr>
 	  </table>
+   </div>
+   <div class="snack1">
+      <img src="img/snake-1.png" width=10%>
+   </div>
+   <div class="snack2">
+      <img src="img/snake-2.png" width=30%>
+   </div>
+   <div class="snack5">
+      <img src="img/snake-5.png" width=30%>
+   </div>
+   <div class="ladder1">
+      <img src="img/ladder-1.png" width=30%>
+   </div>
+   <div class="ladder2">
+      <img src="img/ladder-1.png" width=20%>
    </div>
 </body>
 </html>
