--- a/js/task/bmi/bmi.html
+++ b/js/task/bmi/bmi.html
@@ -17,7 +17,7 @@
 	   let output=document.getElementById("output")
 	   
 	if(height && weight){
-	   let bmi=(weight/((height*height)/10000)).tofixed(2);
+	   let bmi=(weight/((height*height)/10000)).;
 	   
 	   if(bmi < 18.6){
 	      output.innerHTML = "under weight :" + bmi;
