--- a/boostrap/itsMe/itsMe.html
+++ b/boostrap/itsMe/itsMe.html
@@ -76,7 +76,7 @@
 			   <p><span>Phone:</span> 8754668220</p>
 				<p><span>Age:</span> 21</p>
 				<p><span>Degree:</span> B.Sc</p>
-				<p><span>PhEmailone:</span> saranjokpr@gmail.com</p>
+				<p><span>Email:</span> saranjokpr@gmail.com</p>
 			</div>
 			</div>
 		 </div>
@@ -132,7 +132,7 @@
 			      <h4 class="traini">Training</h4>
 				  <h5>6 months</h5>
 				  <p>Fabevy Technologies</p>
-				  <p>Frontend Developer</p>
+				  <p>Frontend Developer Trainee</p>
 				  <h3>Extra skill</h3>
 				  <h4>Type writing</h4>
 				  <p>
