--- a/js/task/todo.html
+++ b/js/task/todo.html
@@ -9,7 +9,9 @@
 	<style>
 	.main{
 	   display:flex;
-	   gap:10rem;
+	   background-color:pink;
+	   padding:5rem;
+	   gap:15rem;
 	}
 	
 	
@@ -18,7 +20,7 @@
 <body>
    <section class="main">
       <div id="main1">
-	     <textarea id="textarea" rows=20; cols=50;></textarea>
+	     <textarea id="textarea" rows=20; cols=50;></textarea><br><br>
 		 <button id="btn">click</button>
 	  </div>
 	  <div id="main2">
