--- a/boostrap/itsMe/itsMe.html
+++ b/boostrap/itsMe/itsMe.html
@@ -25,16 +25,19 @@
           <a class="nav-link" id="solo" href="#">Home</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#about">About</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="#">Resume</a>
+          <a class="nav-link" href="#resume">Resume</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="#">Skill</a>
+          <a class="nav-link" href="#skill">Skill</a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link" href="#">Project</a>
+          <a class="nav-link" href="#pro">Project</a>
+        </li>
+		<li class="nav-item">
+          <a class="nav-link" href="#contact">contact</a>
         </li>
       </ul>
     </div>
@@ -57,7 +60,7 @@
 	  </section>
    </section>
 </section>
-<section class="about">
+<section class="about" id="about">
    <section class="container">
       <section>
 	     <div class="abt">
@@ -83,7 +86,7 @@
 	  </section>
    </section>
 </section>
-<section class="about,">
+<section class="about," id="skill">
    <section class="container">
       <section class="">
 	     <div class="abt">
@@ -106,7 +109,7 @@
 	  </section>
    </section>
 </section>
-<section class="resume">
+<section class="resume" id="resume">
    <section class="container">
       <section class="resumeIn">
 			<div>
@@ -146,7 +149,7 @@
 	  </section>
    </section>
 </section>
-<section class="project">
+<section class="project" id="pro">
    <section class="container">
       <section class="projectIn">
 	     <div>
@@ -195,7 +198,7 @@
 	  </section>
    </section>
 </section>
-<section class="contactOut">
+<section class="contactOut" id="contact">
    <section class="container">
       <section class="contactIn">
 	     <div class="contHead">
@@ -206,7 +209,7 @@
 			<div class="cont">
 			   <iconify-icon class="contIcon" icon="material-symbols:location-on-outline-rounded"></iconify-icon>
 			   <h3>Address</h3>
-			   <p>1/5, Keelapavoor, Tenkasi(Dist)</p>
+			   <p>1/5, Mutharamman kovil st, Keelapavoor, Tenkasi(Dist)</p>
 			</div>
 			</div>
 			<div class="col-12 col-sm-12 col-md-6 col-lg-4">
@@ -214,6 +217,7 @@
 			     <iconify-icon class="contIcon" icon="material-symbols:mail-outline-sharp"></iconify-icon>
 			     <h3>Email Us</h3>
 				 <p>saranjokpr@gmail</p>
+				 <a href="mailto:saranjokpr@gmail">mail</a>
 			  </div>
 			</div>
 			<div class="col-12 col-sm-12 col-md-6 col-lg-4 call">
@@ -221,6 +225,7 @@
 			     <iconify-icon class="contIcon" icon="ic:baseline-call"></iconify-icon>
 			     <h3>Call Us</h3>
 				 <p>+91 8754668220</p>
+				 <a href="tel:8754668220">call me</a>
 			  </div>
 			</div>
 		 </div>
