--- a/own-practice/progress/progress.html
+++ b/own-practice/progress/progress.html
@@ -9,58 +9,36 @@
 </head>
 <body>
    <script>
-      $(".progress").each(function(){
-  
-  var $bar = $(this).find(".bar");
-  var $val = $(this).find("span");
-  var perc = parseInt( $val.text(), 10);
+  const controller = document.querySelector('input[type=range]');
+const radialProgress = document.querySelector('.RadialProgress');
 
-  $({p:0}).animate({p:perc}, {
-    duration: 3000,
-    easing: "swing",
-    step: function(p) {
-      $bar.css({
-        transform: "rotate("+ (45+(p*1.8)) +"deg)", // 100%=180° so: ° = % * 1.8
-        // 45 is to add the needed rotation to have the green borders at the bottom
-      });
-      $val.text(p|0);
-    }
-  });
-});
-   
-   
+const setProgress = (progress) => {
+  const value = `${progress}%`;
+  radialProgress.style.setProperty('--progress', value)
+  radialProgress.innerHTML = value
+  radialProgress.setAttribute('aria-valuenow', value)
+}
+
+setProgress(controller.value)
+controller.oninput = () => {
+  setProgress(controller.value)
+}
       
    </script>
    
    
    
-   <div class="progress">
-  <div class="barOverflow">
-    <div class="bar"></div>
-  </div>
-  <span>10</span>%
-</div>
+ <div
+  class="RadialProgress"
+  role="progressbar"
+  aria-valuenow="20"
+  aria-valuemin="0"
+  aria-valuemax="100"
+></div>
 
-<div class="progress">
-  <div class="barOverflow">
-    <div class="bar"></div>
-  </div>
-  <span>100</span>%
-</div>
+<input type="range" value="20" min="0" max="100" />
 
-<div class="progress">
-  <div class="barOverflow">
-    <div class="bar"></div>
-  </div>
-  <span>34</span>%
-</div>
 
-<div class="progress">
-  <div class="barOverflow">
-    <div class="bar"></div>
-  </div>
-  <span>56.5</span>%
-</div>
 
 </body>
 </html>
