--- a/boostrap/itsMe/itsMe.html
+++ b/boostrap/itsMe/itsMe.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="itsMe.css">
 	<script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <title>itsMe</title>
 </head>
 <body>
@@ -53,7 +54,9 @@
 		 </div>
 		 </div>
 		 <div class="col-12 col-sm-6 col-md-6 col-lg-6">
-		 <div class="navImg">
+		 <div data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000" class="navImg">
 		    <img src="img/saran.jpg" width=100%>
 		 </div>
 		 </div>
@@ -68,14 +71,14 @@
 		 </div>
 		 <div class="row">
 	     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-	     <div class="abtBorder">
+	     <div data-aos="zoom-out-down" data-aos-duration="1000" class="abtBorder">
 		    <img class="borImg" src="img/saranya.jpg" width=100%>
 		 </div>
 		 </div>
 		    <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-			<div class="abtSty mt-5">
+			<div data-aos="zoom-out-down" data-aos-duration="1000" class="abtSty mt-5">
 			   <p><span>Birthday:</span>  1 September 2001</p>
-			   <p><span>place:</span>Tenkasi</p>
+			   <p><span>Place:</span>Tenkasi</p>
 			   <p><span>Phone:</span> 8754668220</p>
 				<p><span>Age:</span> 21</p>
 				<p><span>Degree:</span> B.Sc</p>
@@ -88,7 +91,7 @@
 </section>
 <section class="about," id="skill">
    <section class="container">
-      <section class="">
+      <section>
 	     <div class="abt">
 		    <h2>Skill</h2>
 		 </div>
@@ -118,24 +121,24 @@
 			<div class="resume">
 			<div class="row">
 			   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-			   <div class="res">
+			   <div data-aos="flip-right" data-aos-duration="1000" class="res">
 			      <h3>Education</h3>
 				  <h4>Under-Graduate</h4>
-				  <h5>2019-2022</h5>
-				  <p>Sri paramakalyani clg</p>
 				  <p>B.Sc(physics)</p>
+				  <p>Sri paramakalyani college</p>
+				  <h5>2019-2022</h5>
 				  <p>Manonmaniam Sundaranar University</p>
 				  <p>Percentage:80.4%</p>
-				  <h4>Hobies</h4>
+				  <h4>Hobbies</h4>
 				  <p><li class="list">Reading books</li></p>
 			   </div>
 			   </div>
 			   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-			   <div class="res">
+			   <div data-aos="flip-left" data-aos-duration="1000" class="res">
 			      <h4 class="traini">Training</h4>
-				  <h5>6 months</h5>
-				  <p>Fabevy Technologies</p>
 				  <p>Frontend Developer Trainee</p>
+				  <p>Fabevy Technologies</p>
+				  <h5>6 months</h5>
 				  <h3>Extra skill</h3>
 				  <h4>Type writing</h4>
 				  <p>
@@ -151,7 +154,9 @@
 </section>
 <section class="project" id="pro">
    <section class="container">
-      <section class="projectIn">
+      <section data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000" class="projectIn">
 	     <div>
 		    <h2>My Project</h2>
 		 </div>
@@ -206,14 +211,14 @@
 		 </div>
 	     <div class="row">
 		    <div class="col-12 col-sm-12 col-md-6 col-lg-4">
-			<div class="cont">
+			<div data-aos="zoom-out-down" data-aos-duration="1000" class="cont">
 			   <iconify-icon class="contIcon" icon="material-symbols:location-on-outline-rounded"></iconify-icon>
 			   <h3>Address</h3>
 			   <p>1/5, Mutharamman kovil st, Keelapavoor, Tenkasi(Dist)</p>
 			</div>
 			</div>
 			<div class="col-12 col-sm-12 col-md-6 col-lg-4">
-			  <div class="cont">
+			  <div data-aos="zoom-out-down" data-aos-duration="1000" class="cont">
 			     <iconify-icon class="contIcon" icon="material-symbols:mail-outline-sharp"></iconify-icon>
 			     <h3>Email Us</h3>
 				 <p>saranjokpr@gmail</p>
@@ -221,7 +226,7 @@
 			  </div>
 			</div>
 			<div class="col-12 col-sm-12 col-md-6 col-lg-4 call">
-			  <div class="cont">
+			  <div data-aos="zoom-out-down" data-aos-duration="1000" class="cont">
 			     <iconify-icon class="contIcon" icon="ic:baseline-call"></iconify-icon>
 			     <h3>Call Us</h3>
 				 <p>+91 8754668220</p>
@@ -239,5 +244,11 @@
 	   </section>
 	</section>
 <section>
+
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
