--- a/boostrap/itsMe/itsMe.html
+++ b/boostrap/itsMe/itsMe.html
@@ -91,7 +91,7 @@
 </section>
 <section class="about," id="skill">
    <section class="container">
-      <section>
+      <section data-aos="flip-left" data-aos-duration="1000">
 	     <div class="abt">
 		    <h2>Skill</h2>
 		 </div>
@@ -121,7 +121,7 @@
 			<div class="resume">
 			<div class="row">
 			   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-			   <div data-aos="flip-right" data-aos-duration="1000" class="res">
+			   <div data-aos="flip-right" data-aos-duration="1500" class="res">
 			      <h3>Education</h3>
 				  <h4>Under-Graduate</h4>
 				  <p>B.Sc(physics)</p>
@@ -154,15 +154,15 @@
 </section>
 <section class="project" id="pro">
    <section class="container">
-      <section data-aos="flip-left"
-     data-aos-easing="ease-out-cubic"
-     data-aos-duration="2000" class="projectIn">
+      <section class="projectIn">
 	     <div>
 		    <h2>My Project</h2>
 		 </div>
 		 <div class="row">
 		   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-		      <div class="portImg">
+		      <div data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000" class="portImg">
 			     <img src="img/port2.jpg" width=100%>
 				 <div class="portCont">
 				    <a href="file:///D:/Fabevy/practice-01/boostrap/ninestar/ninestar.html" target="-blank">BOOSTRAP</a>
@@ -171,7 +171,9 @@
 			  </div>
 		   </div>
 		   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-		      <div class="portImg">
+		      <div data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000" class="portImg">
 			     <img src="img/port3.jpg" width=100%>
 				 <div class="portCont">
 				    <a href="file:///D:/Fabevy/practice-01/daily%20task/mamba/mamba.html" target="-blank">HTML & CSS</a>
@@ -182,7 +184,9 @@
 		 </div>
 		 <div class="row">
 		   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-		      <div class="portImg">
+		      <div data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000" class="portImg">
 			     <img src="img/port1.jpg" width=100%>
 				 <div class="portCont">
 				    <a href="file:///D:/Fabevy/practice-01/daily%20task/folio/folio.html" target="-blank">HTML & CSS</a>
@@ -191,7 +195,9 @@
 			  </div>
 		   </div>
 		   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-		      <div class="portImg">
+		      <div data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000" class="portImg">
 			     <img src="img/port4.jpg" width=100%>
 				 <div class="portCont">
 				    <a href="file:///D:/Fabevy/practice-01/daily-task/saranya/saranya.html" target="-blank">HTML & CSS</a>
