--- a/own-practice/progress/progress.html
+++ b/own-practice/progress/progress.html
@@ -8,37 +8,50 @@
 	<title>progress</title>
 </head>
 <body>
-   <script>
-  const controller = document.querySelector('input[type=range]');
-const radialProgress = document.querySelector('.RadialProgress');
+ <div class="card">
+  <div class="percent">
+    <svg>
+      <circle cx="105" cy="105" r="100"></circle>
+      <circle cx="105" cy="105" r="100" style="--percent: 30"></circle>
+    </svg>
+    <div class="number">
+      <h3>30<span>%</span></h3>
+    </div>
+  </div>
+  <div class="title">
+    <h2>HTML</h2>
+  </div>
+</div>
 
-const setProgress = (progress) => {
-  const value = `${progress}%`;
-  radialProgress.style.setProperty('--progress', value)
-  radialProgress.innerHTML = value
-  radialProgress.setAttribute('aria-valuenow', value)
-}
+<div class="card">
+  <div class="percent">
+    <svg>
+      <circle cx="105" cy="105" r="100"></circle>
+      <circle cx="105" cy="105" r="100" style="--percent: 70"></circle>
+    </svg>
+    <div class="number">
+      <h3>70<span>%</span></h3>
+    </div>
+  </div>
+  <div class="title">
+    <h2>CSS</h2>
+  </div>
+</div>
 
-setProgress(controller.value)
-controller.oninput = () => {
-  setProgress(controller.value)
-}
-      
-   </script>
-   
-   
-   
- <div
-  class="RadialProgress"
-  role="progressbar"
-  aria-valuenow="20"
-  aria-valuemin="0"
-  aria-valuemax="100"
-></div>
-
-<input type="range" value="20" min="0" max="100" />
-
-
+<div class="card">
+  <div class="percent">
+    <svg>
+      <circle cx="105" cy="105" r="100"></circle>
+      <circle cx="105" cy="105" r="100" style="--percent: 90"></circle>
+    </svg>
+    <div class="number">
+      <h3>90<span>%</span></h3>
+    </div>
+  </div>
+  <div class="title">
+    <h2>JavaScript</h2>
+  </div>
+</div>
 
 </body>
 </html>
