--- a/boostrap/itsMe/itsMe.html
+++ b/boostrap/itsMe/itsMe.html
@@ -160,8 +160,7 @@
 		 </div>
 		 <div class="row">
 		   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-		      <div data-aos="flip-left"
-     data-aos-easing="ease-out-cubic"
+		      <div data-aos="zoom-in-up"
      data-aos-duration="2000" class="portImg">
 			     <img src="img/port2.jpg" width=100%>
 				 <div class="portCont">
@@ -171,8 +170,7 @@
 			  </div>
 		   </div>
 		   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-		      <div data-aos="flip-left"
-     data-aos-easing="ease-out-cubic"
+		      <div data-aos="zoom-in-up"
      data-aos-duration="2000" class="portImg">
 			     <img src="img/port3.jpg" width=100%>
 				 <div class="portCont">
@@ -184,8 +182,7 @@
 		 </div>
 		 <div class="row">
 		   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-		      <div data-aos="flip-left"
-     data-aos-easing="ease-out-cubic"
+		      <div data-aos="zoom-in-up"
      data-aos-duration="2000" class="portImg">
 			     <img src="img/port1.jpg" width=100%>
 				 <div class="portCont">
@@ -195,8 +192,7 @@
 			  </div>
 		   </div>
 		   <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-		      <div data-aos="flip-left"
-     data-aos-easing="ease-out-cubic"
+		      <div data-aos="zoom-in-up"
      data-aos-duration="2000" class="portImg">
 			     <img src="img/port4.jpg" width=100%>
 				 <div class="portCont">
