--- a/react/reactIntro.html
+++ b/react/reactIntro.html
@@ -47,11 +47,11 @@
 	 console.log(oddNum); 
 	 
 	 //reduce
-	 array=[1, 12, 43, 54, 24];
-	 let arr=array.reduce(function(pre,cur){
+	arr= [1, 2,3 ,4 ];
+	 let array=arr.reduce(function(pre,cur){
 	    return pre+cur;
 	 });
-	 console.log(arr);
+	 console.log(array);
 	 
 	 
 	 
